roomのリファクタ
